// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadcrumbNav > does not display address hover for native tokens 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _fontWeight-inherit _lineHeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        ETH
      </h1>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`BreadcrumbNav > renders hover components correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _fontWeight-inherit _lineHeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        WBTC
      </h1>
      <div
        class="is_TouchableArea  t_group_true"
        role="button"
        style="display: flex; flex-basis: auto; box-sizing: border-box; min-height: 0px; min-width: 0px; flex-shrink: 0; border-top-left-radius: var(--t-radius-rounded12); border-top-right-radius: var(--t-radius-rounded12); border-bottom-right-radius: var(--t-radius-rounded12); border-bottom-left-radius: var(--t-radius-rounded12); cursor: pointer; flex-direction: row; outline-color: rgba(0, 0, 0, 0); opacity: 1; pointer-events: auto; gap: 4px; align-items: center; position: relative; transform: scale(1);"
        tabindex="0"
      >
        <div
          class="_maxWidth-_platformweb_calc100-0px38074892 _whiteSpace-_platformweb_nowrap _overflowX-_platformweb_hidden _overflowY-_platformweb_hidden _textOverflow-_platformweb_ellipsis _color-_grouptrue-hover_accent3Hove112785 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _color-accent3"
        >
          <span
            class="font_body _whiteSpace-_platformweb_nowrap _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh507465454"
            data-disable-theme="true"
          >
            0x2260...C599
          </span>
        </div>
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative _width-16px _height-16px"
        >
          <div
            style="display: flex; align-items: stretch; flex-basis: auto; box-sizing: border-box; min-height: 0px; min-width: 0px; flex-shrink: 0; flex-direction: column; opacity: 0; position: absolute; top: 0px; left: 0px; transform: translateY(5px); transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;"
          >
            <svg
              fill="none"
              stroke-width="8"
              style="width: 16px; height: 16px; color: rgb(12, 137, 17);"
              viewBox="0 0 17 18"
            >
              <path
                d="M8.62508 0.666664C4.02508 0.666664 0.291748 4.4 0.291748 9C0.291748 13.6 4.02508 17.3333 8.62508 17.3333C13.2251 17.3333 16.9584 13.6 16.9584 9C16.9584 4.4 13.2251 0.666664 8.62508 0.666664ZM11.9834 7.50001L8.09173 11.3833C7.97507 11.5083 7.81674 11.5667 7.65007 11.5667C7.49174 11.5667 7.3334 11.5083 7.2084 11.3833L5.26675 9.44169C5.02508 9.20002 5.02508 8.79997 5.26675 8.55831C5.50841 8.31664 5.90841 8.31664 6.15008 8.55831L7.65007 10.0583L11.1001 6.61668C11.3417 6.36668 11.7417 6.36668 11.9834 6.61668C12.2251 6.85834 12.2251 7.25001 11.9834 7.50001Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
